# handler/response.go
@@ -4,14 +4,15 @@ import (
 	"fmt"
 	"net/http"
 
+	"github.com/andamorim2206/gopportunities/schemas"
 	"github.com/gin-gonic/gin"
 )
 
 func sendError(ctx *gin.Context, code int, msg string) {
 	ctx.Header("Content-type", "application/json")
 	ctx.JSON(code, gin.H{
-		"message": msg,
-		"errorCode": code, 
+		"message":   msg,
+		"errorCode": code,
 	})
 }
 
@@ -19,6 +20,16 @@ func sendSuccess(ctx *gin.Context, op string, data interface{}) {
 	ctx.Header("Content-type", "application/json")
 	ctx.JSON(http.StatusOK, gin.H{
 		"message": fmt.Sprintf("operation from handler: %s successfull", op),
-		"data": data,
+		"data":    data,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
